Fix CSS flexbox layout issue causing chart to not resize properly on mobile rotation

--- a/static/style.css
+++ b/static/style.css
@@ -255,6 +255,8 @@ h3 {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    min-width: 0;
+    min-height: 0;
 }
 
 .chart-header {
@@ -329,4 +331,6 @@ h3 {
 #tvchart {
     flex-grow: 1;
     width: 100%;
+    min-height: 0;
+    overflow: hidden;
 }
